<resources>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reslease_data">Release Date :</string>
    <string name="ro_review_msg">No Review For This Movie</string>
    <string name="read_more">READ MORE</string>
    <string name="author">author</string>
    <string name="review">review</string>
    <string name="realese">realese</string>
    <string name="vote">vote</string>
    <string name="tvGenres">tvGenres</string>
    <string name="overview">Overview</string>
    <string name="reviews">User Reviews</string>
    <string name="trailers">Videos</string>
    <string name="cast">Top Billed Cast</string>
    <string name="you_don_t_have_an_internet_connection">No internet found, check your connection.</string>
    <string name="now_playing">Now Playing</string>
    <string name="top_rated">Top Rated</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="popular_tv_shows">Popular</string>
    <string name="top_rated_tv_shows">Top Rated</string>
    <string name="currently_airing_tv_shows">Currently Airings</string>
    <string name="tv_shows_airing_today">Airing Today</string>
    <string name="more_like_this">More Like This</string>
    <string name="your_list_is_empty">Your Watchlist is Empty</string>
    <string name="search">search</string>
    <string name="ahmed">Ahmed</string>
    <string name="_10">/10</string>
    <string name="top_horror">Top Horror</string>
    <string name="top_action_amp_adventure"><![CDATA[Top Action & Adventure]]></string>
    <string name="comedy_drama_romance">Comedy, Drama, Romance</string>
    <string name="top_action_amp_adventure_tv"><![CDATA[Top Action & Adventure]]></string>
    <string name="top_drama_amp_crime"><![CDATA[Top Drama & Crime]]></string>
    <string name="top_comedy">Top Comedy</string>
    <string name="war_amp_politics"><![CDATA[War & Politics]]></string>
    <string name="save_image">Save image</string>
    <string name="movie_image">movie image</string>
    <string name="actor_image">Actor image</string>
    <string name="fav_image">fav image</string>
    <string name="fav_poster_image">fav poster image</string>
    <string name="down_arrow">down arrow</string>
    <string name="movie_item_image">movie item image</string>
    <string name="movie_row_image">movie row image</string>
    <string name="actor_photo">actor photo</string>
    <string name="trailer_image">trailer image</string>
    <string name="play_icon_image">play icon image</string>
    <string name="image_arrow_button">image arrow button</string>
    <string name="backdrop_image">backdrop image</string>
    <string name="app_title">Movies &amp; TV Geeks</string>
    <string name="movie_db_logo">movie db logo</string>
    <string name="imdb_logo">imdb logo</string>
    <string name="tomatoes_logo">tomatoes logo</string>
    <string name="director">Director</string>
    <string name="writing">Writing</string>
    <string name="production">Production</string>
    <string name="details">Details</string>
    <string name="more_links">More Links</string>
    <string name="biography">Biography</string>
    <string name="known_for">Known For</string>
    <string name="birthday">Birthday</string>
    <string name="place_of_birth">Place of Birth</string>
    <string name="facebook_logo">facebook logo</string>
    <string name="insta_logo">insta logo</string>
    <string name="twitter_logo">twitter logo</string>
    <string name="poster_image">poster image</string>
    <string name="watch_movie">Watch Full Movie</string>
    <string name="play">Play</string>
    <string name="get_link">Get Link</string>
    <string name="all_seasons">All Seasons</string>
    <string name="intro_image">Intro Image</string>
    <string name="episode_images">Episode Images</string>
    <string name="watch_movie_2">Watch Movie 2</string>
    <string name="watch_episode">Watch Episode</string>
    <string name="play_icons">play icons</string>
</resources>