<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="IsConnected"
            type="Boolean" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_nowPlaying"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="vertical"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                app:visibleGone="@{IsConnected}">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="4dp">

                    <TextView
                        android:id="@+id/tv_nowPlaying"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:layout_marginBottom="6dp"
                        android:text="@string/now_playing"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:textStyle="normal" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_view_main"
                        android:layout_width="match_parent"
                        android:layout_height="225dp"
                        android:layout_marginStart="3dp"
                        android:clickable="true"
                        android:focusable="true" />
                </LinearLayout>


            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_topRated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardView_nowPlaying"
                android:layout_marginTop="12dp"
                android:orientation="vertical"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                app:visibleGone="@{IsConnected}">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="4dp">

                    <TextView
                        android:id="@+id/tv_topRated"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:layout_marginBottom="6dp"
                        android:text="@string/top_rated"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:textStyle="normal" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView_topRated"
                        android:layout_width="match_parent"
                        android:layout_height="225dp"
                        android:layout_marginStart="3dp"
                        android:clickable="true"
                        android:focusable="true" />

                </LinearLayout>


            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_Upcoming"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardView_topRated"
                android:layout_marginTop="12dp"
                android:orientation="vertical"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                app:visibleGone="@{IsConnected}">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="4dp">

                    <TextView
                        android:id="@+id/tv_upcoming"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:layout_marginBottom="6dp"
                        android:text="@string/coming_soon"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:textStyle="normal" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView_UpComing"
                        android:layout_width="match_parent"
                        android:layout_height="225dp"
                        android:layout_marginStart="3dp"
                        android:clickable="true"
                        android:focusable="true" />
                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_Popular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardView_Upcoming"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:orientation="vertical"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                app:visibleGone="@{IsConnected}">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="4dp">

                    <TextView
                        android:id="@+id/tv_PopularMovies"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:layout_marginBottom="6dp"
                        android:text="@string/popular_movies"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:textStyle="normal" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView_popularMovies"
                        android:layout_width="match_parent"
                        android:layout_height="225dp"
                        android:layout_marginStart="3dp"
                        android:clickable="true"
                        android:focusable="true" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_topHorrorMovies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardView_Popular"
                android:layout_marginBottom="12dp"
                android:orientation="vertical"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                app:visibleGone="@{IsConnected}">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="4dp">

                    <TextView
                        android:id="@+id/tv_topHorrorMovies"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:layout_marginBottom="6dp"
                        android:text="@string/top_horror"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:textStyle="normal" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView_TopHorrorMovies"
                        android:layout_width="match_parent"
                        android:layout_height="225dp"
                        android:layout_marginStart="3dp"
                        android:clickable="true"
                        android:focusable="true" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_topActionMovies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardView_topHorrorMovies"
                android:layout_marginBottom="12dp"
                android:orientation="vertical"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                app:visibleGone="@{IsConnected}">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="4dp">

                    <TextView
                        android:id="@+id/tv_topActionMovies"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:layout_marginBottom="6dp"
                        android:text="@string/top_action_amp_adventure"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:textStyle="normal" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView_TopActionMovies"
                        android:layout_width="match_parent"
                        android:layout_height="225dp"
                        android:layout_marginStart="3dp"
                        android:clickable="true"
                        android:focusable="true" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_topRomaceMovies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardView_topActionMovies"
                android:layout_marginBottom="12dp"
                android:orientation="vertical"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                app:visibleGone="@{IsConnected}">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="4dp">

                    <TextView
                        android:id="@+id/tv_topRomanceMovies"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:layout_marginBottom="6dp"
                        android:text="@string/comedy_drama_romance"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:textStyle="normal" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView_TopRomanceMovies"
                        android:layout_width="match_parent"
                        android:layout_height="225dp"
                        android:layout_marginStart="3dp"
                        android:clickable="true"
                        android:focusable="true" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/empty_view_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/you_don_t_have_an_internet_connection"
                android:textColor="@android:color/white"
                android:textStyle="normal"
                app:visibleGone="@{!IsConnected}" />


        </RelativeLayout>


    </ScrollView>

</layout>

